# ipv8-pow-client

./: .env  .gitignore  README.md  extract.py  main.py  pyproject.toml
.github/workflows/: tests.yml
Bonus/: README.md  pyproject.toml
Bonus/scripts/: difficulty_demo.py  partition_demo.py
Bonus/src/: blocks.py  community.py  payloads.py
Bonus/test/: test_blockchain.py  test_chain.py  test_difficulty.py  test_partition.py
integration_tests/: test_server.py
lab3/: blocks.py  community.py  main.py  payloads.py  registration.py  test_blockchain.py  test_chain.py  test_server.py
scripts/: run_three_nodes.py
src/: blockchain.py  blocks.py  community.py  core.py  main.py  node.py  registration.py
test/: test_blockchain.py  test_chain.py  test_core.py
test/lab3/: test_blockchain.py  test_chain.py  test_server.py
